--- a/css/profilecard.css
+++ b/css/profilecard.css
@@ -28,17 +28,15 @@
 }
 
 .deck {
-    position: fixed;
   display: flex;
     align-self: center;
   flex-direction: column;
   height: auto;
-  width: calc(100vw / 3);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   -webkit-animation-duration: 0.5s;
   -moz-animation-duration: 0.5s;
-    margin: 20vh calc(50vw - 150px);
+    margin: 20vh calc(50vw - 250px);
     z-index: 10000;
 }
 
